--- a/css/styles.css
+++ b/css/styles.css
@@ -95,12 +95,7 @@ img {
   .container-header {
     display: flex;
     align-items: center;
-  }
-
-  .nav-list {
-    display: flex;
-    padding-left: 15px;
-    padding-right: 15px;
+    border-bottom: 1px solid #ECECEC;
   }
    
   .contact-list {
@@ -128,16 +123,16 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   padding: 32px 0;
-  color: var(--brand-color);
+  color: var(--brand-color--);
   display: block;}
 
   .current {
-  color: rgb(109, 27, 186);
+  color: var(--blue1--);
   }
 
   .header-link:hover,
   .header-link:active{
-  color: #2196F3;
+  color: var(--blue2--);
   } 
 
  .contact-mail {
@@ -157,7 +152,10 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: #757575;
-  margin-left: 50px;}
+  }
+
+ .tel-item {margin-left: 50px;
+}
 
   .contact-tel:hover,
   .contact-tel:focus {
@@ -218,9 +216,6 @@ padding: 94px 0;
 .hero-list {
 display: flex;
 gap: 30px;
-padding-left: ;
-padding-right: ;
-justify-content: center;
 }
 
 .hero-item {
@@ -302,18 +297,26 @@ font-size: 16px;
 line-height: 1.19;
 text-align: center;
 letter-spacing: 0.03em;
-color: #212121;}
+color: #212121;
+margin-bottom: 10px;}
 
 .team-post {
 font-size: 16px;
-line-height: 1.19px;
+line-height: 1.19;
 text-align: center;
 letter-spacing: 0.03em;
 color: #757575;
 }
 
+.about-team {
+padding-top: 30px;
+padding-bottom: 30px;
+}
+
 .footer {
   background: #2F303A;
+  padding: 60px 0;
+  border-bottom: 1px c;
 }
 
 .footer-container {
@@ -322,8 +325,7 @@ color: #757575;
   font-size: 26px;
   line-height: 31px;
   letter-spacing: 0.03em;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  color: #2196F3
 }
 
 .footer-logo {
@@ -376,18 +378,23 @@ color: rgba(255, 255, 255, 0.6);}
 color: #2196F3;
 }
 
+.footer-item :not(:last-child){
+margin-bottom: 9px;  
+}
+
 .section-filter-list {
-  margin-top: 94px;
-  margin-bottom: 50px;
+ padding: 94px 0;
 }
 
 .filter-container {
   display: flex;
   justify-content: center;
   gap: 8px;
+  margin-bottom: 50px;
 }
 .card {
-  border-bottom: 0cm;
+  padding: 20px 24px;
+  border: 1px solid #EEEEEE;
 }
 
 .hero-container {
@@ -409,13 +416,16 @@ color: #2196F3;
   border-radius: 4px;
   cursor: pointer;
   border: 0;
+  padding: 6px 22px; 
 }
 
-.filter-item:hover,
-.filter-item:active {
-  color: #FFFFFF
-  background-color: #2196F3;
-}
+ .filter-item:hover {
+  color: #FFFFFF;
+  background-color: #2196F3;}
+
+ .filter-item:active {
+  color: #FFFFFF;
+  background-color: #2196F3;}
 
 .portfolio-item {
   font-weight: 700;
@@ -423,12 +433,15 @@ color: #2196F3;
   line-height: 2;
   letter-spacing: 0.06em;
   color: #212121;
+  margin: 0;
+  margin-bottom: 4px;
 }
 .portfolio-kind {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
   color: #757575;
+  margin: 0;
 }
 
 .visually-hidden {
