--- a/css/styles.css
+++ b/css/styles.css
@@ -6,22 +6,19 @@ body {
   background-color: #FFFFFF;
 }
 
-reset: 
 p,
 h1,
 h2,
 h3,
 h4,
 h5,
-h6,{
-  margin: 0;
-}
+h6 
+{margin: 0;}
 
 ul,
-ol {
-  margin: 0;
-  padding-left: 0;
-}
+ol
+ {margin: 0;
+  padding-left: 0;}
 
 button {
   display: block;
@@ -95,7 +92,7 @@ img {
   .container-header {
     display: flex;
     align-items: center;
-    border-bottom: 1px solid #ECECEC;
+    
   }
    
   .contact-list {
@@ -116,6 +113,8 @@ img {
   .logo {
     margin-right: 93px;
   }
+
+  .header {border-bottom: 1px solid #ECECEC;}
 
  .header-link {
   font-weight: 500;
@@ -206,7 +205,8 @@ color: #FFFFFF;}
 
 .hero {
 padding: 94px 0;
-  }
+margin-bottom: 24px; }
+
 .hero-container {
   display:;
 }
@@ -231,6 +231,7 @@ line-height: 1.14;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #212121;
+margin-bottom: 10px;
 }
 
 .hero-item-text {
@@ -266,8 +267,9 @@ margin-bottom: 50px;
 
 .team-block {background-color: #F5F4FA;}
 
-.container-team {padding-top: 94px;
-padding-bottom: 94px;}
+.container-team {
+
+}
 
 .team-block-title {
 font-weight: 700;
@@ -378,7 +380,7 @@ color: rgba(255, 255, 255, 0.6);}
 color: #2196F3;
 }
 
-.footer-item :not(:last-child){
+.footer-item:not(:last-child) {
 margin-bottom: 9px;  
 }
 
